class and stylebinding

--- a/databinding/package.json
+++ b/databinding/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "~9.1.13",
     "@angular/common": "~9.1.13",
     "@angular/compiler": "~9.1.13",
-    "@angular/core": "^14.0.3",
+    "@angular/core": "~9.1.13",
     "@angular/forms": "~9.1.13",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
@@ -25,16 +25,16 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.3",
-    "@angular/cli": "~9.1.15",
+    "@angular-devkit/build-angular": "~0.901.13",
+    "@angular/cli": "~9.1.13",
     "@angular/compiler-cli": "~9.1.13",
+    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^6.4.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
